fix overflow bug

--- a/src/component/listing/RestaurantInfo.css
+++ b/src/component/listing/RestaurantInfo.css
@@ -13,7 +13,7 @@
 
 .address {
   margin-top: 6px;
-  width: 430px;
+  width: 360px;
   overflow-wrap: break-word;
 }
 
